--- a/src/System.Text.Primitives/System/Text/InvariantParser_signed.tt
+++ b/src/System.Text.Primitives/System/Text/InvariantParser_signed.tt
@@ -190,8 +190,101 @@ for (int i = 0; i < primitives.Length; i++)
 				}
                 return true;
             }
+			else
+			{
+				int byteIndex = index;
+				int codeUnitsConsumed = 0;
+                while (byteIndex < utf8Text.Length)
+                {
+                    byte result;
+                    int bytesConsumedByCodingUnit = 0;
+                    int codingUnitLength;
+					int nodeIndex = -1, level = 0;
+                    do
+                    {
+                        result = cultureAndEncodingInfo.ParseNextByte(utf8Text[byteIndex], out codingUnitLength, ref nodeIndex, ref level);
+                        bytesConsumedByCodingUnit++;
+                        byteIndex++;
+                    } while (result == (byte)FormattingData.Symbol.Continue);
+                    if (!cultureAndEncodingInfo.VerifyCodeUnit(ref utf8Text, byteIndex, result, bytesConsumedByCodingUnit, codingUnitLength))
+                        result = (int)FormattingData.Symbol.Invalid;
 
-            return false;
+                    if (result > 9)
+                    {
+						if (bytesConsumed == 0 && result == (int)FormattingData.Symbol.MinusSign)
+						{
+							negative = true;
+							signed = true;
+							bytesConsumed += codingUnitLength;
+							byteIndex += codingUnitLength - bytesConsumedByCodingUnit;
+							codeUnitsConsumed++;
+						}
+						else if (bytesConsumed == 0 && result == (int)FormattingData.Symbol.PlusSign)
+						{
+							negative = true;
+							signed = true;
+							bytesConsumed += codingUnitLength;
+							byteIndex += codingUnitLength - bytesConsumedByCodingUnit;
+						}
+						else if (codeUnitsConsumed == 1 && signed) // if the first character happened to be a '-' or a '+', we reset the byte counter so logic proceeds as normal.
+                        {
+                            bytesConsumed = 0;
+							return false;
+                        }
+                        else if (bytesConsumed == 0) // check to see if we've processed any digits at all
+                        {
+                            return false;
+                        }
+                        else
+                        {
+                            if (negative) // We check if the value is negative at the very end to save on comp time
+                            {
+                                value = (<#= primitives[i] #>)-value;
+								if (value > 0)
+								{
+									value = 0;
+									bytesConsumed = 0;
+									return false;
+								}
+                            }
+                            return true; // otherwise return true
+                        }
+                    }
+                    else if (value > <#= classes[i] #>.MaxValue / 10)
+                    {
+                        value = default(<#= primitives[i] #>);
+                        bytesConsumed = 0;
+                        return false;
+                    }
+                    // This next check uses a hardcoded 8 because the max values for unsigned types all end in 7s.
+					// The min values all end in 8s, which is why that addition exists.
+                    else if (value == <#= classes[i] #>.MaxValue / 10 &&  result >= 8 + (negative ? 1 : 0) ) // overflow
+                    {
+                        value = default(<#= primitives[i] #>);
+                        bytesConsumed = 0;
+                        return false;
+                    }
+					else
+					{
+						value = (<#= primitives[i] #>)(value * 10 + result); // left shift the value and add the nextByte
+						bytesConsumed += codingUnitLength;
+						byteIndex += codingUnitLength - bytesConsumedByCodingUnit;
+						codeUnitsConsumed++;
+					}
+                }
+
+				if (negative) // We check if the value is negative at the very end to save on comp time
+                {
+                    value = (<#= primitives[i] #>)-value;
+					if (value > 0)
+					{
+						value = default(<#= primitives[i] #>);
+						bytesConsumed = 0;
+						return false;
+					}
+                }
+                return true; // otherwise return true
+			}
         }
 
 		public static unsafe bool TryParse(byte* utf8Text, int index, int length, FormattingData cultureAndEncodingInfo, Format.Parsed numericFormat, 
