--- a/src/System.Text.Primitives/System/Text/InvariantParser_unsigned.tt
+++ b/src/System.Text.Primitives/System/Text/InvariantParser_unsigned.tt
@@ -110,8 +110,56 @@ for (int i = 0; i < primitives.Length; i++)
                 }
                 return true;
             }
+			else
+            {
+                int byteIndex = index;
+                while (byteIndex < utf8Text.Length)
+                {
+                    byte result;
+                    int bytesConsumedByCodingUnit = 0;
+                    int codingUnitLength;
+					int nodeIndex = -1, level = 0;
+                    do
+                    {
+                        result = cultureAndEncodingInfo.ParseNextByte(utf8Text[byteIndex], out codingUnitLength, ref nodeIndex, ref level);
+                        bytesConsumedByCodingUnit++;
+                        byteIndex++;
+                    } while (result == (byte)FormattingData.Symbol.Continue);
+					if (!cultureAndEncodingInfo.VerifyCodeUnit(ref utf8Text, byteIndex, result, bytesConsumedByCodingUnit, codingUnitLength))
+                        result = (int)FormattingData.Symbol.Invalid;
 
-            return false;
+                    if (result > 9)
+                    {
+                        if (bytesConsumed == 0) // check to see if we've processed any digits at all
+                        {
+                            return false;
+                        }
+                        else
+                        {
+                            return true; // otherwise return true
+                        }
+                    }
+                    else if (value > <#= classes[i] #>.MaxValue / 10)
+                    {
+                        value = default(<#= primitives[i] #>);
+                        bytesConsumed = 0;
+                        return false;
+                    }
+                    // This next check uses a hardcoded 6 because the max values for unsigned types all end in 5s.
+                    else if (value == <#= classes[i] #>.MaxValue / 10 && result >= 6) // overflow
+                    {
+                        value = default(<#= primitives[i] #>);
+                        bytesConsumed = 0;
+                        return false;
+                    }
+
+                    value = (<#= primitives[i] #>)(value * 10 + result); // left shift the value and add the nextByte
+                    bytesConsumed += codingUnitLength;
+                    byteIndex += codingUnitLength - bytesConsumedByCodingUnit;
+                }
+
+                return true;
+            }
         }
 
 		public static unsafe bool TryParse(byte* utf8Text, int index, int length, FormattingData cultureAndEncodingInfo, Format.Parsed numericFormat, 
